<resources>
    <string name="app_name">Activ Distribution</string>
    <string name="door_to_door_flyer_delivery_n_with_gps_tracking">Door to Door Flyer Delivery \n with GPS Tracking</string>
    <string name="by_signing_up_you_agree_with_our_terms_and_conditions_and_privacy_policy">By signing up, you agree with our Terms and Conditions and Privacy Policy</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="please_enter_your_registered_email_address_below_n_and_we_will_send_your_reset_password_link">Please enter your registered email address below \n and we will send your reset password link.</string>
    <string name="reset_password">Reset Password</string>
    <string name="forogt_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone Number</string>
    <string name="address">Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="enter_zipcode_optional">Enter Zipcode (Optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth_optional">Select Date of Birth (Optional)</string>
    <string name="id_proof">ID Proof</string>
    <string name="attach_id_proof_optional">Attach ID Proof (Optional)</string>
    <string name="create_profile">Create Profile</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="browse">Browse</string>
    <string name="enter_address_optional">Enter Address (Optional)</string>
    <string name="not_sufficient_permissions">Not sufficient permissions for this action\ngoto Settings>Apps>%1$s>Permissions</string>
    <string name="choose_image_source">Choose Image Resource</string>
    <string name="file_provider_authority_" translatable="false">com.activedistribution.fileprovider</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="new_jobs">New Jobs</string>
    <string name="current_jobs">Current Job</string>
    <string name="complete_jobs">Completed Jobs</string>
    <string name="quantity_of_flyers">Quantity of Flyers</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="update_profile">Update Profile</string>
    <string name="turn_on_off_your_push_notification">Turn On/Off Your Push Notification</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="job_detail">Job Detail</string>
    <string name="we_have_sent_you_an_email_to_your_registered_email_address_with_a_link_to_reset_your_password">We have sent you an email to your \n registered email address with a \n link to reset your password.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="enter_the_value">Enter the value</string>
    <string name="pause">Pause</string>
    <string name="completed">Completed</string>
    <string name="no_internet_error">Please check your internet connectivity.</string>
    <string name="on_dailure_error">Some thing went wrong..  We are sorry for inconvenience</string>
    <string name="contact_us">Contact Us</string>
    <string name="company_name">Company Name</string>
    <string name="enter_message">Enter message</string>
    <string name="this_device_not_supported">This device is not supported</string>
    <string name="api_key">AIzaSyCVzGh5nFNlFvsdYU726-j98eTeiWA1Xzk</string>
    <string name="loading">Loading</string>
    <string name="ok">Ok</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="termServices"><medium> By signing up, you agree with our </medium> <a href="http://pos.rajagsm.in/getStaticPages/termsAndConditions" style ="color:#FFFFFF"><font size="11"><b>Terms and Conditions</b></font></a> <medium>and </medium> <a href="http://pos.rajagsm.in/getStaticPages/privacyPolicy" style ="color:#FFFFFF"><font size="11"><b>Privacy Policy.</b> </font></a></string>

</resources>
