<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        app:showAsAction="always"
        android:title="@string/home" />

    <item
        android:id="@+id/profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
    <item
        android:id="@+id/setting"
        app:showAsAction="always"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/logout"
        app:showAsAction="always"
        android:icon="@drawable/logout_seletor"
        android:title="@string/logout" />



</menu>