<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutLL"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/White"
        android:layout_height="50dp">

        <com.activedistribution.view.customfont.TextViewSansRegular
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/Black1"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/left_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        android:background="@color/White"
        android:orientation="vertical">

    <com.activedistribution.view.customfont.TextViewSansBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_10sdp" />

    <com.activedistribution.view.customfont.EditText
        android:id="@+id/oldpasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:hint="@string/enter_old_password"
        android:padding="@dimen/_2sdp"
        android:background="@null"
        android:layout_marginLeft="@dimen/_5sdp"
        android:drawableLeft="@drawable/lock_black"
        android:drawablePadding="@dimen/_5sdp"
        android:imeOptions="actionNext"
        android:layout_marginRight="@dimen/_10sdp"
        android:inputType="textPassword"
        android:textColorHint="@color/textHint"
        android:textColor="@color/Black1"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Black1"
        android:layout_margin="@dimen/_5sdp"/>

    <com.activedistribution.view.customfont.TextViewSansBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_10sdp" />

    <com.activedistribution.view.customfont.EditText
        android:id="@+id/newpasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:hint="@string/enter_new_password"
        android:padding="@dimen/_2sdp"
        android:background="@null"
        android:layout_marginLeft="@dimen/_5sdp"
        android:drawableLeft="@drawable/lock_black"
        android:drawablePadding="@dimen/_5sdp"
        android:imeOptions="actionNext"
        android:layout_marginRight="@dimen/_10sdp"
        android:inputType="textPassword"
        android:textColorHint="@color/textHint"
        android:textColor="@color/Black1"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Black1"
        android:layout_margin="@dimen/_5sdp"/>

    <com.activedistribution.view.customfont.TextViewSansBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_10sdp" />

    <com.activedistribution.view.customfont.EditText
        android:id="@+id/conPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:hint="@string/enter_confirm_password"
        android:padding="@dimen/_2sdp"
        android:background="@null"
        android:layout_marginLeft="@dimen/_5sdp"
        android:drawableLeft="@drawable/lock_black"
        android:drawablePadding="@dimen/_5sdp"
        android:imeOptions="actionDone"
        android:layout_marginRight="@dimen/_10sdp"
        android:inputType="textPassword"
        android:textColorHint="@color/textHint"
        android:textColor="@color/Black1"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Black1"
        android:layout_margin="@dimen/_5sdp"/>

        <com.activedistribution.view.customfont.Button
            android:id="@+id/submitBT"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_bg"
            android:textColor="@color/White"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>