<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

<LinearLayout
    android:id="@+id/layoutLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/White">

        <com.activedistribution.view.customfont.TextViewSansRegular
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/create_profile"
            android:textColor="@color/Black1"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/left_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:background="@color/White">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userIV"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/create_profile"/>

        <com.activedistribution.view.customfont.TextViewSansRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/upload_profile_picture"
            android:textColor="@color/Black1"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/_10sdp"
          android:layout_marginRight="@dimen/_10sdp"
          android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:weightSum="2">

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">

                  <com.activedistribution.view.customfont.TextViewSansBold
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/first_name"
                      android:textColor="@color/colorPrimary"
                      android:layout_marginTop="@dimen/_50sdp"
                      android:textSize="@dimen/_11sdp"
                      android:layout_marginLeft="@dimen/_5sdp"/>

                  <com.activedistribution.view.customfont.EditText
                      android:id="@+id/firstNameET"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/enter_first_name"
                      android:inputType="text"
                      android:padding="@dimen/_2sdp"
                      android:textColor="@color/Black1"
                      android:layout_marginLeft="@dimen/_5sdp"
                      android:background="@null"
                      android:drawableLeft="@drawable/user"
                      android:drawablePadding="@dimen/_5sdp"
                      android:imeOptions="actionNext"
                      android:backgroundTint="@color/textHint"
                      android:layout_marginRight="@dimen/_10sdp"
                      android:textColorHint="@color/textHint"
                      android:textSize="@dimen/_11sdp"
                      android:layout_marginTop="@dimen/_5sdp"/>

                  <View
                      android:layout_width="match_parent"
                      android:layout_height="0.5dp"
                      android:background="@color/Black1"
                      android:layout_margin="@dimen/_5sdp"/>

              </LinearLayout>

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">

                  <com.activedistribution.view.customfont.TextViewSansBold
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/last_name"
                      android:textColor="@color/colorPrimary"
                      android:layout_marginTop="@dimen/_50sdp"
                      android:textSize="@dimen/_11sdp"
                      android:layout_marginLeft="@dimen/_5sdp"/>

                  <com.activedistribution.view.customfont.EditText
                      android:id="@+id/lastNameET"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/enter_last_name"
                      android:inputType="text"
                      android:padding="@dimen/_2sdp"
                      android:textColor="@color/Black1"
                      android:layout_marginLeft="@dimen/_5sdp"
                      android:background="@null"
                      android:drawableLeft="@drawable/user"
                      android:drawablePadding="@dimen/_5sdp"
                      android:imeOptions="actionNext"
                      android:backgroundTint="@color/textHint"
                      android:layout_marginRight="@dimen/_10sdp"
                      android:textColorHint="@color/textHint"
                      android:textSize="@dimen/_11sdp"
                      android:layout_marginTop="@dimen/_5sdp"/>

                  <View
                      android:layout_width="match_parent"
                      android:layout_height="0.5dp"
                      android:background="@color/Black1"
                      android:layout_margin="@dimen/_5sdp"/>

              </LinearLayout>


          </LinearLayout>

          <com.activedistribution.view.customfont.TextViewSansBold
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/phone_number"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="@dimen/_10sdp"
              android:textSize="@dimen/_11sdp"
              android:layout_marginLeft="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.EditText
              android:id="@+id/phoneET"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_phone_number"
              android:inputType="number"
              android:padding="@dimen/_2sdp"
              android:layout_marginLeft="@dimen/_5sdp"
              android:background="@null"
              android:textColor="@color/Black1"
              android:drawableLeft="@drawable/phone"
              android:maxLength="13"
              android:drawablePadding="@dimen/_5sdp"
              android:imeOptions="actionNext"
              android:backgroundTint="@color/textHint"
              android:layout_marginRight="@dimen/_10sdp"
              android:textColorHint="@color/textHint"
              android:textSize="@dimen/_11sdp"
              android:layout_marginTop="@dimen/_5sdp"/>

          <View
              android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/Black1"
              android:layout_margin="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.TextViewSansBold
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/address"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="@dimen/_10sdp"
              android:textSize="@dimen/_11sdp"
              android:layout_marginLeft="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.EditText
              android:id="@+id/addressET"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_address_optional"
              android:inputType="text"
              android:textColor="@color/Black1"
              android:padding="@dimen/_2sdp"
              android:focusable="false"
              android:layout_marginLeft="@dimen/_5sdp"
              android:background="@null"
              android:drawableLeft="@drawable/loc"
              android:drawablePadding="@dimen/_5sdp"
              android:imeOptions="actionNext"
              android:backgroundTint="@color/textHint"
              android:layout_marginRight="@dimen/_10sdp"
              android:textColorHint="@color/textHint"
              android:textSize="@dimen/_11sdp"
              android:layout_marginTop="@dimen/_5sdp"/>

          <View
              android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/Black1"
              android:layout_margin="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.TextViewSansBold
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/zipcode"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="@dimen/_10sdp"
              android:textSize="@dimen/_11sdp"
              android:layout_marginLeft="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.EditText
              android:id="@+id/zipcodeET"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_zipcode_optional"
              android:inputType="number"
              android:padding="@dimen/_2sdp"
              android:maxLength="6"
              android:textColor="@color/Black1"
              android:layout_marginLeft="@dimen/_5sdp"
              android:background="@null"
              android:drawableLeft="@drawable/zip_icon"
              android:drawablePadding="@dimen/_5sdp"
              android:imeOptions="actionNext"
              android:backgroundTint="@color/textHint"
              android:layout_marginRight="@dimen/_10sdp"
              android:textColorHint="@color/textHint"
              android:textSize="@dimen/_11sdp"
              android:layout_marginTop="@dimen/_5sdp"/>

          <View
              android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/Black1"
              android:layout_margin="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.TextViewSansBold
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/date_of_birth"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="@dimen/_10sdp"
              android:textSize="@dimen/_11sdp"
              android:layout_marginLeft="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.EditText
              android:id="@+id/dobET"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/select_date_of_birth_optional"
              android:inputType="text"
              android:padding="@dimen/_2sdp"
              android:textColor="@color/Black1"
              android:focusable="false"
              android:layout_marginLeft="@dimen/_5sdp"
              android:background="@null"
              android:drawableLeft="@drawable/calender"
              android:drawablePadding="@dimen/_5sdp"
              android:imeOptions="actionNext"
              android:backgroundTint="@color/textHint"
              android:layout_marginRight="@dimen/_10sdp"
              android:textColorHint="@color/textHint"
              android:textSize="@dimen/_11sdp"
              android:layout_marginTop="@dimen/_5sdp"/>

          <View
              android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/Black1"
              android:layout_margin="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.TextViewSansBold
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/id_proof"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="@dimen/_10sdp"
              android:textSize="@dimen/_11sdp"
              android:layout_marginLeft="@dimen/_5sdp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

          <com.activedistribution.view.customfont.EditText
              android:id="@+id/idproofET"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="@string/attach_id_proof_optional"
              android:inputType="text"
              android:padding="@dimen/_2sdp"
              android:layout_marginLeft="@dimen/_5sdp"
              android:textColor="@color/Black1"
              android:background="@null"
              android:focusable="false"
              android:drawableLeft="@drawable/id_card"
              android:drawablePadding="@dimen/_5sdp"
              android:imeOptions="actionNext"
              android:backgroundTint="@color/textHint"
              android:layout_marginRight="@dimen/_10sdp"
              android:textColorHint="@color/textHint"
              android:textSize="@dimen/_11sdp"
              android:layout_marginTop="@dimen/_5sdp"/>

             <com.activedistribution.view.customfont.Button
                 android:id="@+id/browseBT"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_28sdp"
                 android:text="@string/browse"
                 android:paddingLeft="@dimen/_5sdp"
                 android:paddingRight="@dimen/_5sdp"
                 android:layout_gravity="center_vertical"
                 android:textAllCaps="false"
                 android:textSize="@dimen/_10sdp"
                 android:background="@drawable/browse"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:textColor="@color/colorPrimary"/>

          </LinearLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/Black1"
              android:layout_margin="@dimen/_5sdp"/>

          <com.activedistribution.view.customfont.Button
              android:id="@+id/createProfileBT"
              android:layout_width="match_parent"
              android:layout_height="@dimen/_35sdp"
              android:textAllCaps="false"
              android:textStyle="bold"
              android:layout_marginTop="@dimen/_30sdp"
              android:background="@drawable/button_bg"
              android:textColor="@color/White"
              android:text="@string/create_profile" />



      </LinearLayout>

    </LinearLayout>

</LinearLayout>

</ScrollView>