<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutLL"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/White"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.activedistribution.view.customfont.TextViewSansRegular
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/Black1"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/left_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/forgot_password"/>

        <com.activedistribution.view.customfont.TextViewSansRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/please_enter_your_registered_email_address_below_n_and_we_will_send_your_reset_password_link"
            android:padding="@dimen/_3sdp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/Black1"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_12sdp" />

        <com.activedistribution.view.customfont.TextViewSansBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_11sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <com.activedistribution.view.customfont.EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@null"
            android:textColor="@color/Black1"
            android:drawableLeft="@drawable/mail_black"
            android:drawablePadding="@dimen/_5sdp"
            android:backgroundTint="@color/textHint"
            android:layout_marginRight="@dimen/_10sdp"
            android:textColorHint="@color/textHint"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/Black1"
            android:layout_margin="@dimen/_5sdp"/>

        <com.activedistribution.view.customfont.Button
            android:id="@+id/resetPasswordBT"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_bg"
            android:textColor="@color/White"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/reset_password" />

    </LinearLayout>


</LinearLayout>